* Ensure String#gsub returns the correct result when passed uncommon patterns. [jddalton, Samuel Lebeau]

* Array optimizations. [jddalton, Joe Gornick, John Resig]
 - Array#compact - Removed use of Array#select and added an option to remove "falsy" values
 - Array#flatten - Removed use of Array#inject
 - Array#include - Only use Array#indexOf
 - Array#indexOf - Renamed parameter from i to fromIndex
 - Array#inject  - Renamed parameter memo to accumulator
 - Array#map     - If iterator isn't specified return cloned array
 - Array#max|min - Use Math.max|min for non-sparse arrays when no iterator is given
 - Array#toJSON  - Removed use of Array#_each
 - Array#uniq    - Remove use of Array#inject and parameter sorted
 - Array#without - Removed use of Array#select
 - Array#intersect   - Removed use of Array#_each and renamed parameter other to array
 - Array#lastIndexOf - Renamed param i to fromIndex

* Remove unused feature test "ARGUMENTS_INSTANCEOF_ARRAY". [jddalton]

* Optimize ObjectRange by caching its range values on the first use of "_each". [jddalton]

* Optimize Enumerable methods by replacing calls to "each" with "_each" and change aliases to mimic ones set by the Array extensions. [jddalton]

* unit test: Enusre String#sub does not freeze when passed an empty pattern. [jddalton]

* Add support for control groups to Form.Element.EventObserver() and cleanup Form.Element.Observer(). [jddalton]

* Fix Bug('ARRAY_CONCAT_ARGUMENTS_BUGGY') detection and ensure Array#concat's replacement returns an array. [jddalton]

* Optimize Element#getOffsetParent by using the regexp case-insensitive flag instead of tagName.toLowerCase(). [jddalton]

* unit test: Add test to ensure Element#getOffsetParent doesn't raise an exception when called from the children of a document fragment. [jddalton]

* Simplify String#extractScripts and add a unit test to ensure empty scripts are not returned. [jddalton]
